Vertically align about image and fix font sizes

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -19,6 +19,7 @@ h5,
 h6 {
     font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
+    /* font-size: 14px; */
 }
 
 .lead {
@@ -112,7 +113,7 @@ h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/banner-bg.jpg) no-repeat center center;
+    background: url(../img/intro-bg.jpg) no-repeat center center;
     background-size: cover;
 }
 
@@ -168,4 +169,4 @@ p.copyright {
 .vertical-align {
     display: flex;
     align-items: center;
-  }
+}
